brainPop/Frontend/src/assets/styles/style_Desktop3.css
.desktop-3{
    display: flex;
    justify-content: left;
    flex-direction: column;
    max-width: 99%;
    margin-top: 20px;
    margin-left: 40px;
}

body.left-aligned {
    align-items: flex-start;
    justify-content: flex-start;
}

.breadcrumb-container {
    color: var(--primary-color);
    display: flex;
    align-items: center;
    gap: 10px;
    max-height: 40px;
}

.breadcrumb-link {
    cursor: pointer;
    margin: 0 5px;
}
.back-button{
    background-color: var(--primary-color);
    color: var(--background-color1);
    border: none;
    border-radius: 10px;
    font-size: 1rem;
    text-decoration: none;
    cursor: pointer;
    transition: background 0.3s, color 0.3s;
    min-width: 100px;
    text-align: center;
}

.add {
    width: 6%;
    height: auto;
    position: absolute;
    right: 5%;
    bottom: 5%;
    object-fit: cover;
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--blackBackground);
    display: flex;
    justify-content: center;
    align-items: center;
}
.toggleContainer {
    position: relative;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    width: 100%;
    border: 3px solid var(--toggleContainer);
    border-radius: 20px;
    background: var(--toggleContainer);
    font-weight: bold;
    color: var(--toggleContainer);
    cursor: pointer;


}
.toggleContainer::before {
    content: '';
    position: absolute;
    width: 50%;
    height: 100%;
    left: 0;
    border-radius:20px;
    background: var(--primary-color);
    transition: all 0.3s;
}
.toggleCheckbox:checked + .toggleContainer::before {
    left: 50%;
}
.toggleContainer div {
    font-family: 'Arial', sans-serif;
    padding: 6px;
    text-align: center;
    z-index: 1;
}
.toggleCheckbox {
    display: none;
}
.toggleCheckbox:checked + .toggleContainer div:first-child{
    color: var(--primary-color);
    transition: color 0.3s;
}
.toggleCheckbox:checked + .toggleContainer div:last-child{
    color: var(--toggleContainer);
    transition: color 0.3s;
}
.toggleCheckbox + .toggleContainer div:first-child{
    color: var(--toggleContainer);
    transition: color 0.3s;
}
.toggleCheckbox + .toggleContainer div:last-child{
    color: var(--primary-color);
    transition: color 0.3s;
}

.modal {
    background: linear-gradient(to bottom right, var(--background-color2), var(--secondary-color));
    padding: 20px;
    border-radius: 10px;
    text-align: center;
    width: 50%;
    height: 50%;
    display: flex;
    flex-direction: column;
    position: relative;
}

.modal-buttons {
    margin-top: 10%;
    bottom: 10px;
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 30%;
}

.input-container{
    margin-top: 5%;
}

.confirm-button, .cancel-button {
    padding: 10px;
}

.items-container {

    display: flex;
    gap: 30px;
    justify-content: flex-start;
    align-items: flex-start;
    margin-top: 2rem;
    margin-left: 0.5rem;
    height: auto;
    width: 100%;
}

.item-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: transform 0.2s ease-in-out;
    cursor: pointer;
    width: 150px;
    height: auto;
}
.icon-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
}

.item-icon {
    width: 100%;
    height: 100%;
}
.item-container:hover{
    transform: scale(1.05);
}

.item-text {
    font-size: 1em;
    font-weight: 400;
    margin-top: 5px;

}

.context-menu {
    background: var(--grayBackground);
    backdrop-filter: blur(10px);
    border-radius: 5px;
    padding: 10px;
    display: flex;
    flex-direction: column;
    gap: 5px;
    z-index: 1000;
}

